divisione in sezioni html

--- a/U1W1D3.html
+++ b/U1W1D3.html
@@ -10,14 +10,48 @@
 
   <body>
     <!-- header -->
-    <!-- Navigation -->
-    <!-- Main -->
-    <!-- Section1 -->
-    <!-- Article -->
-    <!-- Section2 -->
-    <!-- Section3 -->
-    <!-- Aside -->
-    <!-- Footer -->
+    <div class="container">
+      <header>
+        <a href="">
+          <img src="./assets/logo.png" width="300" />
+        </a>
+      </header>
+      <!-- Navigation -->
+      <nav>
+        <p>Part of A SIMPLE FABULOUS GIVING</p>
+      </nav>
+      <!-- Main -->
+      <h1>Focaccia with caramelized Onions, Cranberries, and Brie</h1>
+      <!-- Section1 -->
+      <!-- p -->
+      <p>Wow your taste buds with...</p>
+      <a href="">
+        <img src="./assets/focaccia.png" width="300" />
+      </a>
+      <p>featured in</p>
+      <p>ingredients for the focaccia</p>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <p>ingredients for the topping</p>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <p>method</p>
+      <ol>
+        <li></li>
+      </ol>
+      <!-- Footer -->
+      <footer>Read more on LINK</footer>
+    </div>
   </body>
 </html>
 
