--- a/U1W1D3.html
+++ b/U1W1D3.html
@@ -17,38 +17,52 @@
         </a>
       </header>
       <!-- Navigation -->
-      <nav>
-        <p>Part of A SIMPLE FABULOUS GIVING</p>
-      </nav>
+      <div>
+        <nav>
+          <p>Part of A SIMPLE FABULOUS GIVING</p>
+        </nav>
+      </div>
       <!-- Main -->
-      <h1>Focaccia with caramelized Onions, Cranberries, and Brie</h1>
-      <!-- Section1 -->
-      <!-- p -->
-      <p>Wow your taste buds with...</p>
-      <a href="">
-        <img src="./assets/focaccia.png" width="300" />
-      </a>
-      <p>featured in</p>
-      <p>ingredients for the focaccia</p>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-      <p>ingredients for the topping</p>
-      <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-      </ul>
-      <p>method</p>
-      <ol>
-        <li></li>
-      </ol>
+      <main>
+        <h1>Focaccia with caramelized Onions, Cranberries, and Brie</h1>
+        <!-- Section1 -->
+        <!-- p -->
+        <p>
+          Wow your taste buds with this festive focaccia appetizer topped with
+          sweet caramelized onions,tart cranberries, and creamy brie.It will
+          become your new favourite holiday starter!
+        </p>
+        <a href="">
+          <img src="./assets/focaccia.png" width="300" />
+        </a>
+        <p>FEATURED IN Fresh Cranberry Recipes That Go Beyond Sauce</p>
+        <div>
+          <p>Ingredients</p>
+          <h5>For the focaccia:</h5>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <h5>For the topping:</h5>
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+          <p>Method</p>
+          <ol>
+            <li>
+              Make the focaccia dough
+              <p></p>
+            </li>
+          </ol>
+        </div>
+      </main>
       <!-- Footer -->
       <footer>Read more on LINK</footer>
     </div>
