added few classes

--- a/U1W1D3.html
+++ b/U1W1D3.html
@@ -10,7 +10,7 @@
 
   <body>
     <!-- header -->
-    <div class="container">
+    <div>
       <header>
         <a href="">
           <img src="./assets/logo.png" width="300" />
@@ -37,8 +37,8 @@
         </a>
         <p>FEATURED IN Fresh Cranberry Recipes That Go Beyond Sauce</p>
         <div>
-          <p>Ingredients</p>
-          <h5>For the focaccia:</h5>
+          <p class="section">Ingredients</p>
+          <h5 class="title5">For the focaccia:</h5>
           <ul>
             <li></li>
             <li></li>
@@ -46,7 +46,7 @@
             <li></li>
             <li></li>
           </ul>
-          <h5>For the topping:</h5>
+          <h5 class="title5">For the topping:</h5>
           <ul>
             <li></li>
             <li></li>
@@ -54,7 +54,7 @@
             <li></li>
             <li></li>
           </ul>
-          <p>Method</p>
+          <p class="section">Method</p>
           <ol>
             <li>
               Make the focaccia dough
@@ -70,13 +70,6 @@
 </html>
 
 <!-- 
-1. Crea i "contenitori" principali.
-    Analizza l'immagine e dividila in blocchi, partendo da quelli più grandi ed esterni fino a raggiungere le parti più interne della pagina.
-    Questi blocchi diventeranno dei blocchi div, e puoi usarli per stilizzare i principali elementi gerarchici della pagina. 
-    Non focalizzarti troppo sugli elementi minori, almeno all'inizio: identifica solo la struttura principale e ricreala in HTML.
-2. Inserisci del contenuto, anche minimo. 
-    Riempire i blocchi delineati con del contenuto, anche "finto", ti aiuterà a visualizzare il tuo progresso all'interno del browser
-    (senza nessun contenuto, tutto quello che vedrai sarà una pagina bianca!).
 3. Personalizza il CSS. 
     Aggiungi classi ed id agli elementi HTML, se intendi dargli lo stile con CSS. 
     Se trovi stili che intendi applicare su più elementi, utilizza le classi invece degli id. 
