--- a/U1W1D3.html
+++ b/U1W1D3.html
@@ -40,25 +40,25 @@
           <p class="section">Ingredients</p>
           <h5 class="title5">For the focaccia:</h5>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>4 cups (500g) all-purpose flour</li>
+            <li>1 1/2 teaspoons instant yeast</li>
+            <li>1 1/2 teaspoons salt</li>
+            <li>1 3/4 cups (500g) lukewarm water</li>
+            <li>1 1/4 cup extra virgin olive oil, plus more for the pan</li>
           </ul>
           <h5 class="title5">For the topping:</h5>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>3 medium yellow onions, thinly sliced</li>
+            <li>1 tablespoon balsamic vinegar</li>
+            <li>1-2 tablespoons olive oil for brushing on top</li>
+            <li>10 ounces brie...</li>
+            <li>1 1/2 fresh or frozen cranberries</li>
           </ul>
           <p class="section">Method</p>
           <ol>
             <li>
               Make the focaccia dough
-              <p></p>
+              <p>In a medium sized mixing bowl</p>
             </li>
           </ol>
         </div>
