added a paragraph under picture

--- a/U1W1D3.html
+++ b/U1W1D3.html
@@ -15,6 +15,7 @@
         <a href="">
           <img src="./assets/logo.png" width="300" />
         </a>
+        <p>Image: Sally Vegas</p>
       </header>
       <!-- Navigation -->
       <div>
