--- a/U1W1D3.html
+++ b/U1W1D3.html
@@ -65,7 +65,10 @@
         </div>
       </main>
       <!-- Footer -->
-      <footer>Read more on LINK</footer>
+      <footer>
+        Read more on
+        <a href="https://www.youtube.com/ciao">Simply Recipes</a>
+      </footer>
     </div>
   </body>
 </html>
