added margin to container

--- a/U1W1D3.html
+++ b/U1W1D3.html
@@ -11,7 +11,7 @@
 
   <body>
     <!-- header -->
-    <div>
+    <div class="container">
       <header>
         <a href="">
           <img src="./assets/logo.png" width="300" />
